--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "alcancia",
+  "Autor":"Benjamin Andres Paba Gonzalez",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,6 +10,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.1",
+    "sweetalert": "^2.1.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
